@@ -1,3 +1,15 @@
+2011-04-29  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Simon Fraser and Dan Bernstein.
+
+        WebKit2: WebPluginTypeEnabled key is ignored when enumerating plug-ins
+        https://bugs.webkit.org/show_bug.cgi?id=59852
+        <rdar://problem/9314011>
+
+        * Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:
+        (WebKit::getPluginInfoFromPropertyLists): Do what WebKit1 does (but in CF dialect). And yes,
+        I've seen plists with both numbers and booleans used .
+
 2011-04-29  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Simon Fraser.
